# loan-manager

./: .dockerignore  .env.template  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
src/: config.py
src/auth/: authenticate.py  hash_password.py  jwt_handler.py
src/cache/: connection.py
src/database/: connection.py
src/database/models/: __init__.py  base_model.py  loan_payments.py  loans.py  users.py
src/migrations/: env.py
src/migrations/versions/: 2024_05_23_1632-f60c33b2f07f_.py
src/repositories/: abstract_repository.py  loan_payments.py  loans.py  sqlalchemy_repository.py  users.py
src/routers/: __init__.py  dependencies.py
src/routers/v1/: __init__.py  loans.py  users.py
src/schemas/: loan_payments.py  loans.py  users.py
src/services/: loan_payments.py  loans.py  users.py
src/utils/: serialization.py
